--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+/* Header Navigation List Style Options*/
 .header nav ul {
     list-style-type: none;
 }
@@ -41,7 +41,7 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
-/*Text Details*/
+/*Header Navigation Link Text Details*/
 a {
     color: #ffffff;
     text-decoration: none;
